PME-1463 | WIP updating archetypes to SDK 10